--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         #passwordInput::placeholder {
-            color: rgba(109, 109, 109, 0.6);
+            color: rgba(185,188,193,255)
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
