--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         }
 
         #passwordInput {
-            background: rgba(72, 72, 72, 0.1);
+            background: rgba(50,51,53,255);
             border: 1px solid rgba(221, 221, 221, 0.3);
             border-radius: 8px;
             padding: 12px 20px;
@@ -51,7 +51,7 @@
         }
 
         #passwordInput::placeholder {
-            color: rgba(185,188,193,255)
+            color: rgba(185,188,193,255);
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
