--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: black;
+            background: rgba(29,30,32,255);
             z-index: 99999;
             display: flex;
             justify-content: center;
