--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         #passwordInput::placeholder {
-            color: rgba(185,188,193,255);
+            color: #4a4a4a;
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
