--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         }
 
         #passwordInput::placeholder {
-            color: #4a4a4a;
+            color: #8c8c8c;
             font-family: 'Segoe UI', Arial, sans-serif;
         }
 
