--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Adrit Bhatnagar - World's Biggest Chut Paglu! 🎉</title>
     <link rel="icon" type="image/png" href="images/adrit1.png">
     <style>
-        /* ======= PASSWORD PROTECTION ======= */
+        /* ======= PASSWORD PROTECTION 1 ======= */
         .password-overlay {
             position: fixed;
             top: 0;
